# myconfig

./: .gitattributes  .gitignore  .gitmessage  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  PYPI_RELEASE_GUIDE.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  install.sh  pyproject.toml  setup.py  test_completion.sh
.github/workflows/: pages.yml
config/: config.toml
config/defaults/: exclude.txt
contrib/: _myconfig
docs/: OPTIMIZATION_SUMMARY.md  PYPI_RELEASE_GUIDE.md  README.md  cli-tools.md  configuration.md  git-setup.md  installation.md  plugins.md  security.md  templates.md  testing.md  usage.md
site/: Gemfile  README.md  _config.yml  about.md  index.md
site/_layouts/: default.html  doc.html
site/assets/css/: custom.css
site/assets/js/: copy-code.js  search.js  theme-toggle.js
site/docs/: PROJECT_SUMMARY.md  PYPI_RELEASE_GUIDE.md  RELEASE_CHECKLIST.md  cli-tools.md  configuration.md  git-setup.md  index.md  installation.md  plugins.md  security.md  templates.md  testing.md  usage.md
src/: cli.py  core.py  logger.py  utils.py
src/actions/: defaults.py  diffpack.py  doctor.py  export.py  profile.py  restore.py
src/core/: __init__.py  backup.py  base.py  config.py  executor.py
src/core/components/: __init__.py  applications.py  base.py  defaults.py  dotfiles.py  homebrew.py  launchagents.py  mas.py  vscode.py
tests/: __init__.py  conftest.py  run_tests.py  test_applications_enhanced.py  test_cli_tools_config.py  test_config_enhanced.py  test_integration_phase3.py  test_migration_verification.py  test_performance_benchmarks.py
tests/integration/: __init__.py  test_backup_manager.py  test_cli.py
tests/unit/: __init__.py  test_components.py  test_config.py  test_executor.py
