[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myconfig"
dynamic = ["version"]
description = "macOS configuration backup and restore tool"
readme = "README.md"
license = {text = "GPL-2.0"}
authors = [
    {name = "Kyle", email = "kehr.dev@gmail.com"},
]
maintainers = [
    {name = "Kyle", email = "kehr.dev@gmail.com"},
]
keywords = ["macos", "backup", "restore", "configuration", "dotfiles", "homebrew"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    'tomli>=1.2.0; python_version<"3.11"',
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=1.0",
]
encryption = [
    "cryptography>=3.4",
]

[project.scripts]
myconfig = "src.cli:main"

[project.urls]
Homepage = "https://github.com/kehr/myconfig"
Documentation = "https://github.com/kehr/myconfig/blob/main/docs/"
Repository = "https://github.com/kehr/myconfig"
"Bug Tracker" = "https://github.com/kehr/myconfig/issues"
Changelog = "https://github.com/kehr/myconfig/blob/main/docs/OPTIMIZATION_SUMMARY.md"

[tool.setuptools]
package-dir = {myconfig = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.toml", "*.md"]

[tool.setuptools.dynamic]
version = {attr = "src._version.VERSION"}

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
